fix: aside alignment

--- a/styles.css
+++ b/styles.css
@@ -128,7 +128,7 @@ figcaption, time {
 aside {
   margin: 40px 0px;
   color: var(--primary85);
-  border-left: 10px solid var(--primary45);
+  border-left: 8px solid var(--primary45);
   padding-left: 20px;
   position: relative;
 }
